<resources>
    <string name="app_name">SmartBioSensor</string>
    <string name="action_settings">Configurações</string>
    <string name="action_search">Buscar</string>
    <string name="action_export">Exportar</string>
    <string name="perm_desc_flashlight">Descrição flash light</string>
    <string name="measure_intensity_reference_textview_title">Intensidade da Ref.:</string>
    <string name="measure_intensity_textview_title">Intensidade:</string>
    <string name="correction_intensity_reference_textview_title">Intensidade da Ref.:</string>
    <string name="correction_intensity_textview_title">Intensidade:</string>
    <string name="corrected_factor_textview_title">Fator Corrigido:</string>
    <string name="measure_threshold_textview_title">Limiar de Separação:</string>
    <string name="correction_threshold_textview_title">Limiar de Separação:</string>
    <string name="correction_factor_textview_title">Fator:</string>
    <string name="measure_factor_textview_title">Fator:</string>
    <string name="action_measure">Medir Índice de Refração</string>
    <string name="action_correction">Medir Correção</string>
    <string name="correction_title">Correção</string>
    <string name="measure_title">Medição</string>
    <string name="general_title">Geral</string>
    <string name="tab_measure_title">Medição</string>
    <string name="tab_detail_title">Detalhes</string>
    <string name="tab_calibration_title">Calibração</string>
    <string name="medium_refractive_index_title">Índice de Refração:</string>
    <string name="medium_title">Meio:</string>
    <string name="action_measure_calibration">Medir</string>
    <string name="factor_reference_item_calibration_title">Fator Referência:</string>
    <string name="factor_measure_item_calibration_title">Fator Medido:</string>
    <string name="factor_item_calibration_title">Fator:</string>
    <string name="action_measure_reference_calibration">Medir</string>
    <string name="action_discard_calibration">Descartar</string>
    <string name="action_save_calibration">Salvar</string>
    <string name="action_calibration">Calibrar</string>
    <string name="number_average_measure">Nº de Médias (Medição):</string>
    <string name="number_average_calibration">Nº de Médias na Calibração:</string>
    <string name="number_threshold">Threshold:</string>
    <string name="action_save_configuration">Salvar</string>
    <string name="toolbar_configuration">Configuração</string>
    <string name="toolbar_calibration_result">Resultado da Calibração</string>
    <string name="toolbar_export">Exportação</string>
    <string name="initial_date_title">Data Inicial:</string>
    <string name="final_date_title">Data Final:</string>
    <string name="calibration_title">Calibração</string>
    <string name="calibration_y">Y    = </string>
    <string name="calibration_x">X    + </string>
    <string name="calibration_r2">R²  = </string>
    <string name="export_dropbox_title">Dropbox</string>
    <string name="refractive_index_textview_title">Índice de Refraçao:</string>
    <string name="message_error">Erro</string>
    <string name="message_error_saving_configuration">Não foi possível salvar a configuração.</string>
    <string name="message_ok_saving_configuration">Configuração salva com sucesso.</string>
    <string name="message_ok_exporting_data">Dados exportados com sucesso.</string>
    <string name="message_measure_factor_corretion">Meça ao menos uma vez o fator de correção antes de realizar uma medição.</string>

</resources>


