<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbarConfiguration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    </android.support.design.widget.AppBarLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <TextView
            android:id="@+id/measureConfigurationTextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_title"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="@dimen/article_subheading"
            android:layout_marginTop="27dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/numberAverageMeasureTitle" />

        <TextView
            android:id="@+id/numberAverageMeasureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_average_measure"
            android:textColor="@color/colorMediumGrey"
            android:textSize="@dimen/textview_configuracao"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/measureConfigurationTextViewTitle"
            android:layout_toStartOf="@+id/numberAverageMeasure"
            android:layout_marginEnd="14dp" />

        <EditText
            android:id="@+id/numberAverageMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorMediumGrey"
            android:layout_alignBaseline="@+id/numberAverageMeasureTitle"
            android:layout_alignBottom="@+id/numberAverageMeasureTitle"
            android:layout_alignEnd="@+id/buttonSaveConfiguration"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/numberThresholdTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_threshold"
            android:textColor="@color/colorMediumGrey"
            android:textSize="@dimen/textview_configuracao"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/numberAverageMeasureTitle"
            android:layout_alignStart="@+id/numberAverageMeasureTitle" />

        <EditText
            android:id="@+id/numberThreshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorMediumGrey"
            android:layout_alignBaseline="@+id/numberThresholdTitle"
            android:layout_alignBottom="@+id/numberThresholdTitle"
            android:layout_alignStart="@+id/numberAverageMeasure" />



            <TextView
                android:id="@+id/calibrationConfigurationTextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:text="@string/calibration_title"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="@dimen/article_subheading"
                android:layout_below="@+id/numberThreshold"
                android:layout_alignStart="@+id/numberThresholdTitle" />

            <TextView
                android:id="@+id/calibrationYTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:text="@string/calibration_y"
                android:textColor="@color/colorMediumGrey"
                android:textSize="@dimen/textview_configuracao"
                android:layout_below="@+id/calibrationConfigurationTextViewTitle"
                android:layout_alignStart="@+id/calibrationConfigurationTextViewTitle" />

            <TextView
                android:id="@+id/calibrationR2Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calibration_r2"
                android:textColor="@color/colorMediumGrey"
                android:textSize="@dimen/textview_configuracao"
                android:layout_marginTop="14dp"
                android:layout_below="@+id/calibrationA"
                android:layout_alignStart="@+id/calibrationYTitle" />

            <TextView
                android:id="@+id/calibrationXTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calibration_x"
                android:textColor="@color/colorMediumGrey"
                android:textSize="@dimen/textview_configuracao"
                android:layout_alignBaseline="@+id/calibrationA"
                android:layout_alignBottom="@+id/calibrationA"
                android:layout_toEndOf="@+id/calibrationConfigurationTextViewTitle"
                android:layout_marginStart="16dp" />

            <EditText
                android:id="@+id/calibrationB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/calibrationXTitle"
                android:layout_alignBottom="@+id/calibrationXTitle"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/calibrationXTitle"
                android:inputType="number"
                android:text="1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorMediumGrey" />

            <EditText
                android:id="@+id/calibrationA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorMediumGrey"
                android:layout_alignBaseline="@+id/calibrationYTitle"
                android:layout_alignBottom="@+id/calibrationYTitle"
                android:layout_toEndOf="@+id/calibrationR2Title"
                android:layout_marginStart="10dp" />

            <EditText
                android:id="@+id/calibrationR2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorMediumGrey"
                android:layout_alignBaseline="@+id/calibrationR2Title"
                android:layout_alignBottom="@+id/calibrationR2Title"
                android:layout_alignStart="@+id/calibrationA" />

    <Button
        android:id="@+id/buttonSaveConfiguration"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_save_configuration"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/calibrationR2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

</LinearLayout>
